Added the Running Backups page for viewing scheduled and manually started backups that are currently executing.
The password recovery email address can now be edited for mailbox users via the Edit User page and the modify-user API command. The password reset process can also be triggered from within Virtualmin, as well as using the password recovery plugin.
Added support for backing up to and restoring from Dropbox, similar to Virtualmin's existing Google Cloud Storage backup feature.
Switch from the old dkim-milter package to OpenDKIM on CentOS 7 systems.
---- Changes since 4.15 ----
Updated the phpMyAdmin script installer to version 4.3.12 and 4.0.10.9, Piwik to 2.12.1, Moodle to 2.8.5, Django to 1.7.5, Roundcube to 1.1.1, Drupal to 7.35 and 6.35, Django to 1.7.7 and 1.4.20, DokuWiki to 2014-09-29d, Joomla to 3.4.1, TextPattern to 4.5.7, Node.JS to 0.12.1, X2CRM to 5.0.5, Ghost to 0.5.10, and Pydio to 6.0.5.
If the aws command is installed, Virtualmin will call it to perform S3 operations rather than using it's own code. Because this command is developed by Amazon, it can be expected to be reliable in the face of S3 API changes.
---- Changes since 4.16 ----
Updated the Trac script installer to version 1.0.5, ownCloud to 8.0.2, MediaWiki to 1.24.2 and 1.19.24, Node.JS to 0.12.2, phpMyFAQ to 2.8.22, OpenCart to 2.0.2.0, Drupal to 7.36, Pydio to 6.0.6, vTigerCRM to 6.2.0, CMS Made Simple to 1.12, X2Engine to 5.0.6, Ghost to 0.6.0, and phpMyAdmin to 4.4.2.
Improved support for replicating and deleting domains that use a shared home directory and MySQL database to synchronise state across two or more Virtualmin systems.
---- Changes since 4.17 ----
Updated the Dolibarr script installer to version 3.7.0, Wordpress to 4.2.2, SMF to 2.0.10, Revive Adserver to 3.2.0, Piwik to 2.13.1, Ghost to 0.6.2, Pydio to 6.0.7, Drupal to 7.37, ownCloud to 8.0.3, Coppermine to 1.5.36, and phpMyAdmin to 4.4.7 and 4.0.10.10.