@@ -1,0 +1,11 @@
+<header>Action if destination is in use</header>
+
+This option determines what will happen if a Virtualmin backup to the same
+destination is already in progress. The <b>Cancel this backup</b> option will
+allow the running backup to complete, and immediately fail this one. The
+<b>Kill the running backup</b> will terminate the backup that is already
+executing, allowing this one to start. This can be useful to prevent a stuck
+backup from blocking all others that would follow it. <p>
+
+<footer>
+
