@@ -2163,6 +2163,9 @@ backup_email_err=Only send email on failure
 backup_email_doms=Also send email to owners of backed-up servers
 backup_strftime=Do <tt>strftime</tt>-style time substitutions on file or directory name
 backup_onebyone=Transfer each virtual server after it is backed up
+backup_kill=Action if destination is in use
+backup_kill0=Cancel this backup
+backup_kill1=Kill the running backup
 backup_now=Backup Now
 backup_bg=Backup In Background
 backup_save=Save Schedule
@@ -2370,6 +2373,7 @@ backup_webminfailed=.. tar failed : $1
 backup_webminnofiles=.. no ACL files found
 backup_webminproto=.. not required, as the Webmin user is in a remote data store
 backup_esamelock=A backup to the same destination is already running with PID $1
+backup_ekilllock=A backup to the same destination with PID $1 has been terminated
 backup_etarcmd=The <tt>tar</tt> command was not found on your system!
 backup_ezipkey=Encryption cannot be used with ZIP format backups
 backup_edesturl=Backup destination $1 is invalid : $2
