@@ -1496,3 +1496,4 @@ Updated the Trac script installer to version 1.0.5, ownCloud to 8.0.2, MediaWiki
 Improved support for replicating and deleting domains that use a shared home directory and MySQL database to synchronise state across two or more Virtualmin systems.
 ---- Changes since 4.17 ----
 Updated the Dolibarr script installer to version 3.7.0, Wordpress to 4.2.2, SMF to 2.0.10, Revive Adserver to 3.2.0, Piwik to 2.13.1, Ghost to 0.6.2, Pydio to 6.0.7, Drupal to 7.37, ownCloud to 8.0.3, Coppermine to 1.5.36, and phpMyAdmin to 4.4.7 and 4.0.10.10.
+Added an option for scheduled backups to terminate an existing backup to the same destination, rather than being blocked by it.
